# oddity

./: .gitignore  .travis.yml  Makefile  README.md  TODO.org  contributions.org  run-dviz.sh  writeup.org
dviz/: .gitignore  Makefile  Procfile  README.md  package-lock.json  package.json  project.clj  webpack.config.js
dviz-log/: project.clj
dviz-log/dev/: user.clj
dviz-log/src/clj/dvizlog/: routes.clj  system.clj
dviz/env/dev/clj/: user.clj
dviz/resources/public/css/: site.css
dviz/resources/static/: index.html
dviz/src/clj/dviz/: api.clj  config.clj  debugger.clj  handler.clj  modelchecker.clj  routes.clj  server.clj  system.clj
dviz/src/cljc/dviz/: util.cljc
dviz/src/cljs/dviz/: core.cljs  debug-client.cljs  (+3 more)
dviz/src/js/: main.js
examples/python/: defense.py  dsys.py  generals.py  manynodes.py  mcheckertest.py  mutex.py  pinger.py  raft.py  raft_demo.py  shim.py  stateshim.py  statetest.py
examples/verdi/: varddebug.byte
majortom/: .gitignore  Cargo.toml
majortom/examples/: .gitignore  Makefile  ping.conf
majortom/examples/simple/: Makefile  pinger.c  ponger.c  simple.toml
majortom/src/: config.rs  data.rs  lib.rs  main.rs  oddity.rs  ptrace_handlers.rs
majortom/tests/: common.rs  test_simple.rs
oddity/: .dir-locals.el  .usage-database.db  Makefile  Procfile  package-lock.json  package.json  project.clj
oddity/resources/static/: index.html
oddity/src/js/: main.js
pydviz/: big.py  dsys.py  mutex.py  raft.py  shim.py
stviz/: .gitignore  Makefile  events2dot.py  events2dot.sh  example-log.json  example.dot  log2dot.py  log2dot.sh
(+36 files in other folders)
