[package]
name = "majortom"
version = "0.1.0"
authors = ["Doug Woos <doug.woos@gmail.com>"]
edition = "2018"

[dependencies]
nix = "0.13.0"
clap = "2.32.0"
toml = "0.4.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1.3.1"
failure = "0.1.5"
failure_derive = "0.1.5"
log = "0.4.6"
fern = "0.5.7"
chrono = "0.4.6"
bincode = "1.1.2"

[dependencies.libc]
version = "0.2"
